--- a/app/src/main/res/layout/activity_daftar.xml
+++ b/app/src/main/res/layout/activity_daftar.xml
@@ -4,6 +4,7 @@
     android:id="@+id/activity_about"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/side_nav_bar"
     android:orientation="vertical"
     tools:context="com.pit.qrcodesrajabrawijaya.DaftarActivity">
 
@@ -14,7 +15,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/side_nav_bar"
+            android:gravity="center_vertical"
+            android:paddingBottom="10dp"
             android:orientation="vertical"
             android:scrollbarAlwaysDrawVerticalTrack="true">
 
@@ -22,9 +24,8 @@
                 android:id="@+id/login_title"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:layout_marginTop="22dp"
                 android:gravity="center_horizontal"
+                android:paddingTop="10dp"
                 android:text="Selamat Datang"
                 android:textColor="@android:color/white"
                 android:textSize="26sp"
@@ -84,7 +85,20 @@
                         android:layout_marginTop="15dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Pilih Divisi"/>
+                        android:text="Tipe Akun"/>
+
+                    <Spinner
+                        android:id="@+id/spnTipe"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@android:drawable/btn_dropdown"
+                        android:spinnerMode="dropdown" />
+
+                    <TextView
+                        android:layout_marginTop="15dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Pilih Bagian"/>
 
                     <Spinner
                         android:id="@+id/spnDivisi"
