--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -14,10 +14,10 @@
     tools:context="com.pit.qrcodesrajabrawijaya.MainActivity">
 
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginBottom="30dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:background="@mipmap/logo"
+        android:gravity="center_vertical"
         android:layout_gravity="center"
         />
 
@@ -133,7 +133,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="DIVISI"
+                    android:text="AKUN"
                     android:textStyle="bold"
                     android:textAlignment="center"
                     android:textSize="15sp" />
